[tool.poetry]
name = "rich-maker"
version = "0.0.0"
description = ""
authors = ["Kyoung <105770887+taeseokyoung@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "rich_maker"}]

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework-simplejwt = "^5.2.2"
mysqlclient = "^2.1.1"
python-dotenv = "^1.0.0"
opencv-python = "^4.7.0.72"
torch = "1.13.1"
torchvision = "0.14.1"
wget = "^3.2"
matplotlib = "^3.7.1"
scikit-image = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
